--- a/source/_posts/日常经验积累.md
+++ b/source/_posts/日常经验积累.md
@@ -211,3 +211,9 @@ window.onbeforeunload = function (e) {
 };
 ```
 HTML5规范中指出，在该事件中调用window.alert(), window.confirm(), 和 window.prompt()，会被忽略。详细的可参考[MDN](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/onbeforeunload)。
+
+
+### get请求没有body
+HTTP规范也不推荐这么做：
+下面来自 rfc7231 ：
+> A payload within a GET request message has no defined semantics;   sending a payload body on a GET request might cause some existing   implementations to reject the request.
