feat: update all

--- a/source/_posts/分站开发总结.md
+++ b/source/_posts/分站开发总结.md
@@ -3,8 +3,20 @@ title: 项目开发record
 date: 2017-07-27 09:38:34
 tags: [总结, react, webpack]
 ---
+## 业务背景
+1. 已有的阅读产品经过多年的发展，功能已经稳定，但整体用户体量不高、用户活跃度不够，且存在UV和收益下降的趋势，无法达到部门收益的KPI；短期内，无法找到新的增长点，是为了提高收益，达成部门的KPI，迫切需要扩展新的业务线。
+2. 在当时公众号兴起繁荣的大环境下，渠道分销是一个很火的模式，公众号有着大量的用户流量，而我们可以提供海量的阅读资源，所以要解决的问题是如何通过公共号引流，所以我们期望有这样一个平台将资源和用户打通，可以给公众号的用户提供书籍阅读的功能，同时可以实现收益，最终实现和公众号平台的互利共生，这样公众号也乐于和我们合作，继而有一个累积的正向收益。
+基于上面两点，我们计划开发渠道小说分站，分站的整体包括：
+- toA的内部结算系统、书籍编辑器等
+- toB的公众号平台
+- toC的H5阅读分站
+
+## 实现
 ###  前端目录结构
 基于React + React-Router + Sass开发的webpack打包的多页面应用，其中正文页面和搜索页面是基于React-Router开发的单页面应用。路由类型采用的是BrowserRouter，在移动端pushState/replaceState没有兼容问题，可以放心使用。如果是要兼容IE9及以下，则不能使用BrowserRouter，建议使用HashRouter。此外，使用BrowserRouter后，可以借助history的特性帮助我们实现记录每个页面的历史停留位置。
+#### BrowserRouter与HashRouter主要区别
+- hashRouter不支持location.key 、location.state：刷新页面或者直接浏览器回退一步，再前进时，BrowserRouter的页面依然可以获取到state中的值，而在HashRouter页面中无法获取到state的值，因为HashRouter没有使用HTML5的History API，所以刷新路由后导致state值丢失。
+
 ```
 |-- assets
   |
